# tonine_app

./: README.md
backend/: .env  Cargo.toml
backend/migrations/: 20251013102400_tontine.sql
backend/src/: errors.rs  main.rs
backend/src/auth/: config.rs  middleware.rs  mod.rs  models.rs  service.rs
backend/src/handlers/: auth_handler.rs  contribution_handlers.rs  mod.rs  tontine_handlers.rs  tontine_member_handlers.rs  tontine_round_handlers.rs  transaction_handlers.rs  user_handlers.rs
backend/src/model/: contributions.rs  mod.rs  tontine.rs  tontine_members.rs  tontine_rounds.rs  transactions.rs  users.rs
backend/src/repositories/: contributions_repository.rs  mod.rs  tontine_member_repository.rs  tontine_repository.rs  tontine_round_repository.rs  transaction_repository.rs  user_repository.rs
backend/src/routes/: auth_routes.rs  contribution_routes.rs  mod.rs  tontine_member_routes.rs  tontine_round_routes.rs  tontine_routes.rs  transaction_routes.rs  user_routes.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: form.rs  home_page.rs  login.rs  main.rs
frontend/src/tontine/: api.rs  components.rs  mod.rs  tontine.rs  types.rs
