[package]
name = "backend"
version = "0.1.0"
edition = "2024"
authors = ["Fossouo Martial "]
description = "Backend for Tontine application"
license = "MIT"
repository = ""

[dependencies]
actix-web = "4.4"
actix-cors = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls", "postgres","uuid",
    "chrono","json","rust_decimal",]}

dotenvy = "0.15"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12.23", features = ["json"] }
thiserror = "2.0.16"
hex = "0.4.3"
rustc-hex = "2.1.0"
anyhow = "1.0.99"
actix-files = "0.6.8"
bcrypt = "0.17.1"
futures = "0.3"
rust_decimal = { version = "1.35", features = ["serde"] }
jsonwebtoken = "8.3"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
once_cell = "1.21.3"
actix-web-httpauth = "0.8.2"
