[package]
name = "yew_course"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = {version ="0.21.0", features = ["csr"]}
gloo-net = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
serde_json = "1.0.145"
yew-router = "0.18.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement",  "HtmlSelectElement"] }
yew-style = "0.1.4"
yew-style-in-rs = "0.4.1"
gloo-timers = "0.2.4"
console_log = "1.0"
uuid = { version = "1.0", features = ["serde", "v4", "js"] }

